Bug 123426 - Number gets reversed when entered in Format Paragraph / Tabs / Position field
Summary: Number gets reversed when entered in Format Paragraph / Tabs / Position field
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
6.2.0.3 release
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:6.3.0 target:6.2.2
Keywords: bibisected, bisected, regression
: 123758 123820 123945 124078 124126 (view as bug list)
Depends on:
Blocks: Paragraph-Dialog
  Show dependency treegraph
 
Reported: 2019-02-13 07:07 UTC by dorothee.buisson
Modified: 2019-03-17 08:50 UTC (History)
9 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description dorothee.buisson 2019-02-13 07:07:56 UTC
Description:
When I indicate a position in th tab, the number are from right to left : 
example : 12.3 became 3.21

Actual Results:
go to format, paragraph, tab and insert position

Expected Results:
12.3 became 3.21


Reproducible: Always


User Profile Reset: Yes



Additional Info:
12.3 -> 12.3
Comment 1 Julien Nabet 2019-02-13 08:00:40 UTC
On Win with master sources updated yesterday, I could reproduce this.
Comment 2 Julien Nabet 2019-02-13 08:51:43 UTC
I don't reproduce this with LO 6.1.5 => regression

Caolán: do you think it may be related with welding migration done mid september 2018 (see https://cgit.freedesktop.org/libreoffice/core/commit/?id=03cecc2985c10ecfb2efab28f5b03e451e82c777) ?
Comment 3 Cihan Mete Bahadir 2019-02-13 09:16:44 UTC
Hello All,

Even i am so new to LO Development, i have checked the problem with my local build: libreoffice-6.1.5.1,and could not reproduce it. 

I debugged "/core/vcl/source/control/field.cxx" and it seems to me that the problem may be related to:

https://gerrit.libreoffice.org/plugins/gitiles/core/+/70519a43e0d89a6b5d89859a6851f8c757c6b0c7

I will build with related change if i have enough time.


As ı have said i am so new to the development environment, i hope the info helps.

Best Regards
Comment 4 Julien Nabet 2019-02-13 10:00:59 UTC
It's gonna take some time to build without this part since include/rtl/ustrbuf.hxx has been modified (perhaps a full rebuild?)

https://cgit.freedesktop.org/libreoffice/core/commit/?id=70519a43e0d89a6b5d89859a6851f8c757c6b0c7
Comment 5 Cihan Mete Bahadir 2019-02-13 14:16:28 UTC
(In reply to Julien Nabet from comment #4)
> It's gonna take some time to build without this part since
> include/rtl/ustrbuf.hxx has been modified (perhaps a full rebuild?)
> 
> https://cgit.freedesktop.org/libreoffice/core/commit/
> ?id=70519a43e0d89a6b5d89859a6851f8c757c6b0c7

It doesn't worth building and as i see it is most probably caused by the commit you mentioned at comment 2:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=03cecc2985c10ecfb2efab28f5b03e451e82c777)
Comment 6 Xisco Faulí 2019-02-14 14:51:14 UTC
(In reply to Julien Nabet from comment #2)
> I don't reproduce this with LO 6.1.5 => regression
> 
> Caolán: do you think it may be related with welding migration done mid
> september 2018 (see
> https://cgit.freedesktop.org/libreoffice/core/commit/
> ?id=03cecc2985c10ecfb2efab28f5b03e451e82c777) ?

Yes, it's related. Bisected with bibisect-linux64-6.2
Comment 7 Commit Notification 2019-02-14 21:04:41 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/038634b63e997db80c09af3c6493364fa4431bcf%5E%21

Resolves: tdf#123426 don't reformat tabstop pos while editing

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Caolán McNamara 2019-02-14 21:08:26 UTC
fixed in master, backport in 6-2
Comment 9 Julien Nabet 2019-02-15 14:33:00 UTC
On Win7 with master sources updated today, I confirm it works.

Thank you Caolán!
Comment 10 Aron Budea 2019-03-03 00:28:46 UTC
*** Bug 123758 has been marked as a duplicate of this bug. ***
Comment 11 Aron Budea 2019-03-03 00:34:26 UTC
(In reply to Cihan Mete Bahadir from comment #5)
> It doesn't worth building and as i see it is most probably caused by the
> commit you mentioned at comment 2:
> 
> https://cgit.freedesktop.org/libreoffice/core/commit/
> ?id=03cecc2985c10ecfb2efab28f5b03e451e82c777)
Actually it was caused by two commits, that one from comment 2, which caused input to be messed up, and then the following resulted in the input getting reversed:
https://cgit.freedesktop.org/libreoffice/core/commit/?id=4ce5d39689fda418e8f2d7d9c1124190b2cbad7a
author		Caolán McNamara <caolanm@redhat.com>	2018-11-14 13:52:06 +0000
committer	Caolán McNamara <caolanm@redhat.com>	2018-11-15 18:17:35 +0100

bind SalInstanceSpinButton to FormattedField
Comment 12 raal 2019-03-04 05:31:59 UTC
*** Bug 123820 has been marked as a duplicate of this bug. ***
Comment 13 Commit Notification 2019-03-04 15:44:51 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-6-2":

https://git.libreoffice.org/core/+/a5a6e9c8021d547943ad8085873b82ec68136c18%5E%21

Resolves: tdf#123426 don't reformat tabstop pos while editing

It will be available in 6.2.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 14 Julien Nabet 2019-03-08 15:41:37 UTC
*** Bug 123945 has been marked as a duplicate of this bug. ***
Comment 15 Dieter 2019-03-14 14:32:11 UTC
*** Bug 124078 has been marked as a duplicate of this bug. ***
Comment 16 raal 2019-03-17 08:50:20 UTC
*** Bug 124126 has been marked as a duplicate of this bug. ***